# ais2203_exercise2

./: CMakeLists.txt  README.md
include/exercise/: json_parser.hpp  person.hpp  sensor_data.hpp
src/: CMakeLists.txt  json_parser.cpp
src/exercise/: json_parser.cpp
test/: CMakeLists.txt  test1.cpp
test/data/: sensor_data.json
